# mp3asm

./: Changelog  README  configure.in
mp3asm/: Changelog  README
mp3asm/src/: Makefile.am  frame.c  frame.h  mp3asm.h  parse.c  stream.c  stream.h  utils.c  utils.h
src/: mp3asm.c  parse.h  stream.h  tag.c
